# cwd-langgraph-mvp

./: README.md
cwd-a2a-mvp/: .env  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  WORKFLOW_DEBUG_GUIDE.md  mlflow.db  notes.md  pyproject.toml  test_integration.py
cwd-a2a-mvp/common/: __init__.py  a2a_client.py  langgraph_state.py  llm_stub.py  mlflow_utils.py  models.py  redis_utils.py
cwd-a2a-mvp/coordinator/: a2a_server.py  app.py
cwd-a2a-mvp/delegator/: __init__.py  a2a_server.py  app.py
cwd-a2a-mvp/mlruns/0/69c89d87e17743c3b3d7b3036adb9aad/artifacts/: request_payload.json
cwd-a2a-mvp/mlruns/0/7226480c8e1d4ff58816fe0a11f64e5f/artifacts/: request_payload.json
cwd-a2a-mvp/mlruns/0/857adebfb5974cc8a11104b4acaab53d/artifacts/: request_payload.json
cwd-a2a-mvp/mlruns/1/05dd67d0955547b98d3fbfbbb213a3f9/artifacts/: request_payload.json  response_payload.json
cwd-a2a-mvp/mlruns/1/10723204e45141d6b2a99f3300e16fec/artifacts/: request_payload.json  response_payload.json
cwd-a2a-mvp/mlruns/1/21a0b794073c4c2c9b29e018d75535d1/artifacts/: request_payload.json  response_payload.json
cwd-a2a-mvp/mlruns/1/2cfe9bf5d5dd4c2b88ccb10402e32cbb/artifacts/: request_payload.json  response_payload.json
cwd-a2a-mvp/mlruns/1/37459a8dfc444b6ab18871e560b06e0b/artifacts/: request_payload.json  response_payload.json
cwd-a2a-mvp/mlruns/1/3c4b3dcb599445b89978573e4d373b7e/artifacts/: request_payload.json  response_payload.json
cwd-a2a-mvp/mlruns/1/4a0cb18ba54743e594112f6451e541db/artifacts/: request_payload.json  (+1 more)
cwd-a2a-mvp/worker/: a2a_server.py  app.py
(+30 files in other folders)
