[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwd-a2a-mvp"
version = "0.1.0"
description = "Three-agent CWD architecture with A2A protocol and Redis shared state"
requires-python = ">=3.9"
dependencies = [
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "mlflow>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
[tool.hatch.build.targets.wheel]
packages = ["cwd_a2a_mvp"]
